Fix T90313: Align to Transform Orientation Axis Property Doesn't Work

`Orientation Axis` is a property incompatible with `Align` mode and
should not be visible.